# xxkb-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
assets/desktop/: xxkb-config.desktop  xxkbd.desktop
assets/sounds/: LICENSE.md
crates/xxkb-config/: Cargo.toml
crates/xxkb-config-state/: Cargo.toml
crates/xxkb-config-state/src/: dbus_client.rs  editor.rs  lib.rs  validation.rs
crates/xxkb-config/src/: lib.rs  paths.rs
crates/xxkb-configurator/: Cargo.toml
crates/xxkb-configurator/src/: app.rs  main.rs
crates/xxkb-core/: Cargo.toml
crates/xxkb-core/src/: layout.rs  lib.rs  monitors.rs  placement.rs  registry.rs  rules.rs
crates/xxkb-daemon/: Cargo.toml
crates/xxkb-daemon/src/: app.rs  flag.rs  hot_reload.rs  main.rs
crates/xxkb-daemon/src/app/: drag_confirm.rs
crates/xxkb-daemon/tests/: xvfb_smoke.rs
crates/xxkb-dbus/: Cargo.toml
crates/xxkb-dbus/src/: lib.rs
crates/xxkb-dbus/tests/: roundtrip.rs
crates/xxkb-indicators/: Cargo.toml
crates/xxkb-indicators/src/: border.rs  bundle.rs  cache.rs  lib.rs  render.rs
crates/xxkb-migrate/: Cargo.toml
crates/xxkb-migrate/src/: lib.rs  main.rs
crates/xxkb-migrate/tests/: fixture_files.rs
crates/xxkb-migrate/tests/fixtures/: debian_hints.xxkbrc  minimal.xxkbrc
crates/xxkb-sound/: Cargo.toml
crates/xxkb-sound/src/: lib.rs
crates/xxkb-test-utils/: Cargo.toml
crates/xxkb-test-utils/src/: lib.rs  mock_backend.rs
crates/xxkb-x11/: Cargo.toml
crates/xxkb-x11/src/: backend.rs  errors.rs  events.rs  indicator_window.rs  lib.rs  monitors.rs  tracker.rs  xkb.rs
docs/: ARCHITECTURE.md  COMPATIBILITY.md  CONFIG.md  MANUAL_TEST.md
packaging/systemd/: xxkbd.service
tests/docker/: Dockerfile.lxde  Dockerfile.mate  Dockerfile.xfce  README.md  smoke.sh
tests/xvfb/: README.md  run_all.sh
