[package]
name = "xxkb-config-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure-Rust editor state for the xxkb-rs configurator GUI."

[dependencies]
xxkb-config = { workspace = true }
xxkb-core = { workspace = true }
xxkb-dbus = { workspace = true }
globset = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
zbus = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
