[package]
name = "xxkb-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Configuration schema (TOML) for xxkb-rs."

[dependencies]
xxkb-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
figment = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
shellexpand = { workspace = true }
indexmap = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
