[package]
name = "xxkb-configurator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GTK4 + libadwaita configurator for xxkb-rs."

[[bin]]
name = "xxkb-config"
path = "src/main.rs"

[dependencies]
xxkb-config = { workspace = true }
xxkb-config-state = { workspace = true }
xxkb-core = { workspace = true }
xxkb-dbus = { workspace = true }
gtk4 = { workspace = true }
adw = { workspace = true }
glib = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indexmap = { workspace = true }

[package.metadata.deb]
maintainer = "xxkb-rs contributors"
copyright = "2026, xxkb-rs contributors"
license-file = ["../../LICENSE", "0"]
extended-description = "Graphical configuration tool for xxkbd."
depends = "$auto, libgtk-4-1, libadwaita-1-0, librsvg2-2, xxkb-daemon"
section = "x11"
priority = "optional"
assets = [
    ["target/release/xxkb-config", "usr/bin/", "755"],
    ["../../assets/desktop/xxkb-config.desktop", "usr/share/applications/", "644"],
]
