[package]
name = "xxkb-indicators"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Flag rendering for xxkb-rs (pure-Rust resvg/tiny-skia + raster)."

[dependencies]
xxkb-core = { workspace = true }
xxkb-config = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
indexmap = { workspace = true }
resvg = { workspace = true }
usvg = { workspace = true }
tiny-skia = { workspace = true }
image = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
