[package]
name = "xxkb-migrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Convert legacy ~/.xxkbrc into the new TOML format."

[[bin]]
name = "xxkb-migrate"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
xxkb-config = { workspace = true }
xxkb-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indexmap = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
