[package]
name = "xxkb-sound"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Layout-change sound for xxkb-rs (rodio)."

[dependencies]
xxkb-config = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[features]
# Real audio playback via rodio. Requires libasound2-dev at build
# time and an ALSA device at runtime; on systems without one the
# daemon detects the failure at `RodioPlayer::new` and falls back to
# a no-op player. We keep this feature on by default so production
# `cargo install` and `.deb` builds get sound; tests opt out via
# `--no-default-features` when they want to exercise just the
# policy logic without dragging in libasound.
default = ["rodio-playback"]
rodio-playback = ["dep:rodio"]

[dependencies.rodio]
workspace = true
optional = true

[dev-dependencies]
pretty_assertions = { workspace = true }
